# tiny-lang-compiler

./: .gitignore  CMakeLists.txt  expr.h  expr.txt  grammar.txt  interpreter.h  lexer.cpp  lexer.h  main  main.cpp  parser.cpp  parser.h  qt.cpp  statement.h  symbolTable.h  tiny-lang.txt  token.cpp  token.h
include/: expr.h  parser.h  statement.h
